# Semper

./: .gitignore  AlexNet.py  CMakeLists.txt  LeNet.py  README.md  VGG11.py  VGG16.py  bench.cpp  benchmark  benchmark.py  benchmark.sh  implement_orion.md  int_CNN.py  ligero_bench.txt  pad_conv.py  screenlog.0  setup.sh
goldilocks/: README.md  configure.sh
include/: AlexNet.h  CNN.h  CNN_check.h  CNN_proof.h  LeNet.h  VCG16.h  VCG16_check.h  VCG16_proof.h  VCG16_prove.h  VGG11.h  VGG16.h  array_view.h  conv_check.h  counter.h  data_loader.h  div_check.h  e_pow_check.h  goldilocks_quadratic_ext.h  header  highdim_array.h  lazy_logup.h  lazy_map_check.h  lazy_pcs.h  ligero.h  logup.h  ltn_check.h  mat_check.h  mat_check.ipp  merkle.h  mle.h  mle.ipp  mle_convker.cpp  mle_convker.h  mle_convker.ipp  mle_eq.h  mle_eq.ipp  mle_open.h  mle_open.ipp  mle_pow.h  mle_pow.ipp  (+16 more)
model/: AlexNet.py  LeNet.py  benchmark.py
model/comp_acc/: AlexNet_FP16.py  AlexNet_no_quan.py  AlexNet_quan.py  LeNet_FP16.py  LeNet_no_quan.py  LeNet_quan.py  VGG11_FP16.py  VGG11_no_quan.py  VGG11_quan.py
src/: AlexNet.cpp  CNN.cpp  CNN_check.cpp  CNN_proof.cpp  LeNet.cpp  VCG16.cpp  VCG16_check.cpp  VCG16_proof.cpp  VCG16_prove.cpp  VGG11.cpp  VGG16.cpp  conv_check.cpp  counter.cpp  data_loader.cpp  div_check.cpp  e_pow_check.cpp  lazy_logup.cpp  lazy_map_check.cpp  lazy_pcs.cpp  ligero.cpp  logup.cpp  ltn_check.cpp  mat_check.cpp  merkle.cpp  mle.cpp  mle_convker.cpp  mle_eq.cpp  mle_open.cpp  mle_pow.cpp  mle_sumcheck.cpp  oracle.cpp  orion.cpp  orion_pcs.cpp  pad_check.cpp  perm_check.cpp  prod_check.cpp  product2_sumcheck.cpp  product3_sumcheck.cpp  product_sumcheck.cpp  sign_check.cpp  (+2 more)
